--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
             padding: 0;
             width: 100%;
             height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f5f5f5;
+            overflow: hidden;
         }
         iframe {
             width: 100%;
             height: 100%;
-            border: none;
+            border: none; /* Remove border */
         }
     </style>
 </head>
