--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VWS-CODES</title>
-    <link rel="manifest" href="/VWSCODES/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <metal name="google" content="nontranslate">
   <style>
         body, html {
@@ -25,7 +25,7 @@
     <iframe src="https://alonedevs.blogspot.com/?m=1"></iframe>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/VWSCODES/sw.js').then(function(registration) {
+            navigator.serviceWorker.register('sw.js').then(function(registration) {
                 console.log('Service Worker registered with scope:', registration.scope);
             }).catch(function(error) {
                 console.log('Service Worker registration failed:', error);
