--- a/index.html
+++ b/index.html
@@ -3,34 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VWS-CODES</title>
+    <title>Your Blog</title>
     <link rel="manifest" href="manifest.json">
-    <metal name="google" content="nontranslate">
-  <style>
+    <meta name="google" content="notranslate">
+    <style>
         body, html {
             margin: 0;
             padding: 0;
             width: 100%;
             height: 100%;
-            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f5f5f5;
         }
         iframe {
             width: 100%;
             height: 100%;
-            border: none; /* Remove border */
+            border: none;
         }
     </style>
 </head>
 <body>
-    <iframe src="https://alonedevs.blogspot.com/?m=1"></iframe>
+    <iframe src="https://your-blogger-url.blogspot.com"></iframe>
     <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('sw.js').then(function(registration) {
-                console.log('Service Worker registered with scope:', registration.scope);
-            }).catch(function(error) {
-                console.log('Service Worker registration failed:', error);
-            });
-        }
+       window.addEventListener('load', () => {
+         registerSW();
+       });
+    
+       // Register the Service Worker
+       async function registerSW() {
+         if ('serviceWorker' in navigator) {
+           try {
+             await navigator
+               .serviceWorker
+               .register('serviceworker.js');
+           }
+           catch (e) {
+             console.log('SW registration failed');
+           }
+         }
+       }
     </script>
 </body>
 </html>
