--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Blog</title>
+    <title>VWS-CODES</title>
     <link rel="manifest" href="manifest.json">
     <meta name="google" content="notranslate">
     <style>
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <iframe src="https://your-blogger-url.blogspot.com"></iframe>
+    <iframe src="https://alonedevs.blogspot.com/?m=1"></iframe>
     <script>
        window.addEventListener('load', () => {
          registerSW();
