--- a/download.html
+++ b/download.html
@@ -9,11 +9,11 @@
 <body>
   <header>
     <div class="app-info">
-      <img src="/DownloadPage/icon.png" alt="App Icon">
+      <img src="/VWSCODES/vws-codesIcon.png" alt="App Icon">
       <div class="app-details">
         <h1>VWS-CODES</h1>
         <p><a href="#">by SpeeDaily</a></p>
-        <p>| App Size | Rated for 3+ |</p>
+        <p>| 321KB | Rated for 3+ |</p>
       </div>
     </div>
   </header>
