--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
             border: none;
         }
     </style>
+    <!-- Apple Touch Icon -->
+<link rel="apple-touch-icon" sizes="180x180" href="/VWSCODES/apple-touch-icon.png">
+
+<!-- Favicon for various sizes -->
+<link rel="icon" type="image/png" sizes="32x32" href="/VWSCODES/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/VWSCODES/favicon-16x16.png">
+
+<!-- Web App Manifest -->
+<link rel="manifest" href="/VWSCODES/site.webmanifest">
+
+<!-- Safari Pinned Tab Icon -->
+<link rel="mask-icon" href="/VWSCODES/safari-pinned-tab.svg" color="#5bbad5">
+
+<!-- Windows Tile Color -->
+<meta name="msapplication-TileColor" content="#da532c">
+
+<!-- Theme Color for Chrome, Firefox OS, Opera -->
+<meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <iframe src="https://alonedevs.blogspot.com/?m=1"></iframe>
