--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             height: 100%;
             border: none;
         }
+        body {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera, and Edge */
+}
+
     </style>
     <!-- Apple Touch Icon -->
 <link rel="apple-touch-icon" sizes="180x180" href="/VWSCODES/apple-touch-icon.png">
@@ -62,6 +69,28 @@
            }
          }
        }
+        // Disable context menu on the entire document
+document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+});
+
+// Alternatively, disable context menu on specific elements by targeting their class or ID
+// Example for images
+var images = document.getElementsByTagName('img');
+for (var i = 0; i < images.length; i++) {
+    images[i].addEventListener('contextmenu', function(e) {
+        e.preventDefault();
+    });
+}
+
+// Example for links
+var links = document.getElementsByTagName('a');
+for (var i = 0; i < links.length; i++) {
+    links[i].addEventListener('contextmenu', function(e) {
+        e.preventDefault();
+    });
+}
+
     </script>
 </body>
 </html>
