--- a/download.html
+++ b/download.html
@@ -215,7 +215,7 @@
   </section>
   
   <footer>
-    <p>&copy; 2024 Your App Name. All rights reserved.</p>
+    <p>&copy; 2024 VWS-CODES. All rights reserved.</p>
   </footer>
   
 <script>
